# Darknet-On-OpenCL

./: .gitignore  CMakeLists.txt  FindOpenCV.cmake  LICENSE  README.md  darknet.h  darknet_cl.sln  image.cpp
darknet_cl/: darknet_cl.vcxproj  darknet_cl.vcxproj.filters
darknet_cl/clBLAS/: clBLAS.lib
darknet_cl/cl_kernels/: activation_kernels.cl  avgpool_layer_kernels.cl  blas_kernels_1.cl  blas_kernels_2.cl  cl_kernel_source.h  col2im_kernels.cl  convolutional_kernels.cl  crop_layer_kernels.cl  deconvolutional_kernels.cl  dropout_layer_kernels.cl  gen.py  im2col_kernels.cl  maxpool_layer_kernels.cl
darknet_cl/example/: art.cpp  attention.cpp  captcha.cpp  cifar.cpp  classifier.cpp  coco.cpp  darknet.cpp  detector.cpp  lsd.cpp  nightmare.cpp  regressor.cpp  rnn.cpp  segmenter.cpp  super.cpp  tag.cpp  yolo.cpp
darknet_cl/include/: cl_kernel_source.h  darknet.h
darknet_cl/src/: activation_kernels_cl.cpp  activation_layer.cpp  activations.cpp  activations.h  avgpool_layer.cpp  avgpool_layer.h  avgpool_layer_kernels_cl.cpp  batchnorm_layer.cpp  blas.cpp  blas.h  blas_kernels_cl.cpp  box.cpp  cl_warpper.cpp  cl_warpper.h  col2im.h  col2im_kernels_cl.cpp  connected_layer.cpp  convolutional_kernels_cl.cpp  convolutional_layer.cpp  convolutional_layer.h  cost_layer.cpp  cost_layer.h  crnn_layer.cpp  crop_layer.cpp  crop_layer_kernels_cl.cpp  data.cpp  data.h  deconvolutional_kernels_cl.cpp  deconvolutional_layer.cpp  deconvolutional_layer.h  demo.cpp  detection_layer.cpp  dropout_layer.cpp  dropout_layer_kernels_cl.cpp  gemm.cpp  gemm.h  gru_layer.cpp  im2col.h  image.cpp  (+37 more)
